--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "jetifier -r"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "lottie-ios": "3.1.3",
     "lottie-react-native": "^3.3.2",
     "react": "16.9.0",
@@ -21,6 +22,7 @@
     "react-native-screens": "^2.0.0-alpha.22",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "styled-components": "^4.4.1"
