--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react-native": "^3.3.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
